# cx-task-harness

./: .gitignore  .mcp.json  BACKGROUND.md  DESIGN.md  LICENSE  README.ko.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.omc/: prd.json  progress.txt
.omc/sessions/: 01c997ed-2080-434b-85dc-7cdc23a30ef2.json  731f338b-d4dd-4c16-ad2a-cd39ad11e639.json  83cd0517-368e-429b-892e-0a95a1376cb3.json
.omc/state/: agent-replay-f5714056-2e43-44af-bec6-3c7fefaa59e9.jsonl  hud-state.json  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/f5714056-2e43-44af-bec6-3c7fefaa59e9/: ralph-state.json  (+1 more)
claude/: CLAUDE.md
claude/commands/: analyze.md  design.md  guide.md
docs/: TASK_SPEC.md
docs/superpowers/plans/: 2026-04-07-cx-task-harness.md
docs/superpowers/specs/: 2026-04-07-cx-task-harness-design.md
skills/analyze/: SKILL.md
skills/design/: SKILL.md
skills/guide/: SKILL.md
src/cx_task_harness/: __init__.py  server.py
src/cx_task_harness/_schemas/: n8n_workflow.schema.json
src/cx_task_harness/models/: __init__.py  common.py  n8n.py  steps.py  task_spec.py
src/cx_task_harness/n8n/: layout.py  mapper.py  node_templates.py
src/cx_task_harness/tools/: converter.py  n8n_validator.py  templates.py  validator.py
tests/: conftest.py  test_converter.py  test_layout.py  test_mapper.py  test_models.py  test_n8n_nodes.py  test_n8n_validator.py  test_server.py  test_templates.py  test_validator.py
tests/fixtures/: sample_support_logs.csv
tests/schemas/: n8n_workflow.schema.json
(+16 files in other folders)
