[project]
name = "cx-task-harness"
version = "0.2.1"
description = "MCP server that validates CX Task Specs and converts them to n8n workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "syrupy>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cx_task_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
